# pico-pi-dma-test

dma-test/: CMakeLists.txt  main.cc  multiply.pio
pio-test/: CMakeLists.txt  main.cc  test.pio
src/: CMakeLists.txt  main.cc
